--- a/board-assignment.ipynb
+++ b/board-assignment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -19,31 +19,31 @@
      "output_type": "stream",
      "text": [
       "SB Squares 2024 Participants: \n",
-      "1 Brayden Amlin\n",
-      "2 Gian Favero\n",
-      "3 Steven Caro\n",
-      "4 Louis Borrelli\n",
-      "5 Noah Scholl\n",
-      "6 Robert McVinnie\n",
-      "7 Thomas Byrne\n",
-      "8 Andrew Ogley\n",
-      "9 Adrian Ianetta\n",
-      "10 Matthew Ammoscato\n"
+      "1 Gian Favero\n",
+      "2 Brayden Amlin\n",
+      "3 Noah Scholl\n",
+      "4 Andrew Ogley\n",
+      "5 Steven Caro\n",
+      "6 Adrian Iannetta\n",
+      "7 Matthew Ammoscato\n",
+      "8 Stevie Hill\n",
+      "9 Thomas Byrne\n",
+      "10 Robert McVinnie\n"
      ]
     }
    ],
    "source": [
     "participants = [\n",
-    "    \"Gian Favero\",\n",
-    "    \"Thomas Byrne\",\n",
-    "    \"Adrian Iannetta\",\n",
-    "    \"Noah Scholl\",\n",
-    "    \"Andrew Ogley\",\n",
-    "    \"Robert McVinnie\",\n",
     "    \"Brayden Amlin\",\n",
-    "    \"Steven Caro\"\n",
     "    \"Matthew Ammoscato\",\n",
-    "    \"Louis Borrelli\",\n",
+    "    \"Thomas Byrne\",\n",
+    "    \"Steven Caro\",\n",
+    "    \"Stevie Hill\",\n",
+    "    \"Adrian Iannetta\",\n",
+    "    \"Gian Favero\",\n",
+    "    \"Robert McVinnie\",\n",
+    "    \"Andrew Ogley\",\n",
+    "    \"Noah Scholl\",\n",
     "]\n",
     "\n",
     "# Shuffle the list of participants\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -87,32 +87,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brayden Amlin [(0, 4), (7, 1), (9, 9), (3, 8), (6, 9), (3, 4), (8, 1), (5, 5), (5, 4), (0, 1)]\n",
-      "Gian Favero [(5, 3), (0, 0), (9, 4), (8, 0), (8, 4), (0, 7), (6, 2), (4, 4), (0, 6), (9, 5)]\n",
-      "Steven Caro [(4, 1), (1, 2), (3, 1), (9, 7), (4, 8), (0, 5), (9, 1), (4, 5), (2, 1), (3, 9)]\n",
-      "Louis Borrelli [(1, 3), (6, 4), (0, 9), (8, 8), (3, 2), (7, 2), (5, 1), (6, 8), (8, 7), (8, 9)]\n",
-      "Noah Scholl [(5, 7), (9, 2), (6, 0), (3, 6), (1, 8), (0, 2), (8, 5), (5, 2), (0, 3), (7, 8)]\n",
-      "Robert McVinnie [(1, 6), (6, 1), (1, 5), (4, 0), (6, 3), (8, 3), (7, 9), (2, 3), (1, 4), (5, 6)]\n",
-      "Thomas Byrne [(2, 5), (2, 4), (2, 7), (4, 6), (1, 9), (1, 7), (6, 6), (9, 3), (4, 9), (0, 8)]\n",
-      "Andrew Ogley [(7, 7), (9, 6), (9, 8), (2, 0), (6, 5), (2, 9), (1, 0), (7, 3), (4, 7), (7, 6)]\n",
-      "Adrian Ianetta [(4, 3), (3, 0), (8, 6), (7, 4), (5, 9), (5, 0), (7, 0), (9, 0), (3, 5), (7, 5)]\n",
-      "Matthew Ammoscato [(3, 7), (1, 1), (5, 8), (2, 2), (2, 8), (4, 2), (8, 2), (3, 3), (2, 6), (6, 7)]\n"
+      "Gian Favero [(7, 2), (9, 5), (9, 1), (4, 4), (7, 3), (4, 8), (7, 7), (1, 4), (4, 2), (8, 4)]\n",
+      "Brayden Amlin [(0, 2), (0, 5), (5, 8), (7, 8), (2, 0), (1, 0), (4, 7), (3, 7), (5, 2), (5, 1)]\n",
+      "Noah Scholl [(9, 9), (1, 9), (6, 2), (5, 7), (9, 2), (5, 9), (7, 5), (1, 1), (8, 9), (3, 0)]\n",
+      "Andrew Ogley [(6, 0), (5, 6), (9, 7), (8, 6), (6, 3), (3, 3), (2, 4), (9, 3), (4, 6), (0, 9)]\n",
+      "Steven Caro [(5, 3), (7, 9), (4, 0), (6, 6), (7, 6), (4, 5), (8, 8), (9, 0), (2, 3), (3, 9)]\n",
+      "Adrian Iannetta [(8, 3), (7, 1), (6, 1), (2, 8), (7, 4), (0, 7), (5, 5), (7, 0), (6, 5), (0, 1)]\n",
+      "Matthew Ammoscato [(4, 1), (3, 6), (3, 8), (6, 8), (1, 5), (6, 7), (8, 0), (8, 7), (6, 4), (2, 2)]\n",
+      "Stevie Hill [(5, 4), (2, 9), (2, 7), (1, 7), (3, 5), (3, 2), (2, 5), (0, 3), (1, 8), (5, 0)]\n",
+      "Thomas Byrne [(1, 2), (9, 4), (9, 6), (8, 2), (6, 9), (0, 6), (0, 0), (3, 4), (8, 1), (2, 1)]\n",
+      "Robert McVinnie [(3, 1), (2, 6), (0, 8), (4, 9), (8, 5), (1, 3), (4, 3), (1, 6), (0, 4), (9, 8)]\n"
      ]
     }
    ],
    "source": [
-    "# Give each participant ten number permutations\n",
+    "# Give each participant ten random numbers between 0 and 99\n",
+    "np.random.seed(2024)\n",
+    "indice_list = np.arange(100)\n",
     "participant_squares = {}\n",
     "for participant in participants:\n",
-    "    participant_squares[participant] = permutations[:10]\n",
-    "    permutations = permutations[10:]\n",
+    "    indices = np.random.choice(indice_list, 10, replace=False)\n",
+    "    # Remove the indices from the list so that they can't be chosen again\n",
+    "    indice_list = np.setdiff1d(indice_list, indices)\n",
+    "    squares = [permutations[i] for i in indices]\n",
+    "    participant_squares[participant] = squares\n",
     "\n",
     "# Print out the number permutations for each participant\n",
     "for participant, squares in participant_squares.items():\n",
@@ -121,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
