update for public

--- a/board-assignment.ipynb
+++ b/board-assignment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,46 +19,47 @@
      "output_type": "stream",
      "text": [
       "SB Squares 2024 Participants: \n",
-      "1 Adrian Iannetta\n",
-      "2 Brayden Amlin\n",
-      "3 Noah Scholl\n",
-      "4 Andrew Ogley\n",
-      "5 Steven Caro\n",
-      "6 Stevie Hill\n",
-      "7 Matthew Ammoscato\n",
-      "8 Gian Favero\n",
-      "9 Thomas Byrne\n",
-      "10 Robert McVinnie\n"
+      "1 Participant 7\n",
+      "2 Participant 1\n",
+      "3 Participant 10\n",
+      "4 Participant 9\n",
+      "5 Participant 4\n",
+      "6 Participant 6\n",
+      "7 Participant 2\n",
+      "8 Participant 5\n",
+      "9 Participant 3\n",
+      "10 Participant 8\n"
      ]
     }
    ],
    "source": [
     "participants = [\n",
-    "    \"Brayden Amlin\",\n",
-    "    \"Matthew Ammoscato\",\n",
-    "    \"Thomas Byrne\",\n",
-    "    \"Steven Caro\",\n",
-    "    \"Gian Favero\",\n",
-    "    \"Stevie Hill\",\n",
-    "    \"Adrian Iannetta\",\n",
-    "    \"Robert McVinnie\",\n",
-    "    \"Andrew Ogley\",\n",
-    "    \"Noah Scholl\",\n",
+    "    \"Participant 1\",\n",
+    "    \"Participant 2\",\n",
+    "    \"Participant 3\",\n",
+    "    \"Participant 4\",\n",
+    "    \"Participant 5\",\n",
+    "    \"Participant 6\",\n",
+    "    \"Participant 7\",\n",
+    "    \"Participant 8\",\n",
+    "    \"Participant 9\",\n",
+    "    \"Participant 10\",\n",
     "]\n",
     "\n",
     "# Shuffle the list of participants\n",
+    "year = 2024\n",
     "import random\n",
-    "random.seed(2024)\n",
+    "random.seed(year)\n",
     "random.shuffle(participants)\n",
     "\n",
-    "print(\"SB Squares 2024 Participants: \")\n",
+    "print(f\"SB Squares {year} Participants: \")\n",
     "for i, participant in enumerate(participants):\n",
     "    print(i+1, participant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,36 +81,36 @@
     "    permutations.append((i, i))\n",
     "\n",
     "# Shuffle the list of permutations\n",
-    "random.seed(2024)\n",
+    "random.seed(year)\n",
     "random.shuffle(permutations)\n",
     "print(\"Number permutations: \", permutations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adrian Iannetta [(7, 2), (9, 5), (9, 1), (4, 4), (7, 3), (4, 8), (7, 7), (1, 4), (4, 2), (8, 4)]\n",
-      "Brayden Amlin [(0, 2), (0, 5), (5, 8), (7, 8), (2, 0), (1, 0), (4, 7), (3, 7), (5, 2), (5, 1)]\n",
-      "Noah Scholl [(9, 9), (1, 9), (6, 2), (5, 7), (9, 2), (5, 9), (7, 5), (1, 1), (8, 9), (3, 0)]\n",
-      "Andrew Ogley [(6, 0), (5, 6), (9, 7), (8, 6), (6, 3), (3, 3), (2, 4), (9, 3), (4, 6), (0, 9)]\n",
-      "Steven Caro [(5, 3), (7, 9), (4, 0), (6, 6), (7, 6), (4, 5), (8, 8), (9, 0), (2, 3), (3, 9)]\n",
-      "Stevie Hill [(8, 3), (7, 1), (6, 1), (2, 8), (7, 4), (0, 7), (5, 5), (7, 0), (6, 5), (0, 1)]\n",
-      "Matthew Ammoscato [(4, 1), (3, 6), (3, 8), (6, 8), (1, 5), (6, 7), (8, 0), (8, 7), (6, 4), (2, 2)]\n",
-      "Gian Favero [(5, 4), (2, 9), (2, 7), (1, 7), (3, 5), (3, 2), (2, 5), (0, 3), (1, 8), (5, 0)]\n",
-      "Thomas Byrne [(1, 2), (9, 4), (9, 6), (8, 2), (6, 9), (0, 6), (0, 0), (3, 4), (8, 1), (2, 1)]\n",
-      "Robert McVinnie [(3, 1), (2, 6), (0, 8), (4, 9), (8, 5), (1, 3), (4, 3), (1, 6), (0, 4), (9, 8)]\n"
+      "Participant 7 [(7, 2), (9, 5), (9, 1), (4, 4), (7, 3), (4, 8), (7, 7), (1, 4), (4, 2), (8, 4)]\n",
+      "Participant 1 [(0, 2), (0, 5), (5, 8), (7, 8), (2, 0), (1, 0), (4, 7), (3, 7), (5, 2), (5, 1)]\n",
+      "Participant 10 [(9, 9), (1, 9), (6, 2), (5, 7), (9, 2), (5, 9), (7, 5), (1, 1), (8, 9), (3, 0)]\n",
+      "Participant 9 [(6, 0), (5, 6), (9, 7), (8, 6), (6, 3), (3, 3), (2, 4), (9, 3), (4, 6), (0, 9)]\n",
+      "Participant 4 [(5, 3), (7, 9), (4, 0), (6, 6), (7, 6), (4, 5), (8, 8), (9, 0), (2, 3), (3, 9)]\n",
+      "Participant 6 [(8, 3), (7, 1), (6, 1), (2, 8), (7, 4), (0, 7), (5, 5), (7, 0), (6, 5), (0, 1)]\n",
+      "Participant 2 [(4, 1), (3, 6), (3, 8), (6, 8), (1, 5), (6, 7), (8, 0), (8, 7), (6, 4), (2, 2)]\n",
+      "Participant 5 [(5, 4), (2, 9), (2, 7), (1, 7), (3, 5), (3, 2), (2, 5), (0, 3), (1, 8), (5, 0)]\n",
+      "Participant 3 [(1, 2), (9, 4), (9, 6), (8, 2), (6, 9), (0, 6), (0, 0), (3, 4), (8, 1), (2, 1)]\n",
+      "Participant 8 [(3, 1), (2, 6), (0, 8), (4, 9), (8, 5), (1, 3), (4, 3), (1, 6), (0, 4), (9, 8)]\n"
      ]
     }
    ],
    "source": [
     "# Give each participant ten random numbers between 0 and 99\n",
-    "np.random.seed(2024)\n",
+    "np.random.seed(year)\n",
     "indice_list = np.arange(100)\n",
     "participant_squares = {}\n",
     "for participant in participants:\n",
@@ -142,7 +143,7 @@
     "        grid[square[0], square[1]] = f'{participant[0][0]}{participant[1][0]}'\n",
     "\n",
     "# Save grid to a .csv file\n",
-    "np.savetxt(\"SB_Squares_2024.csv\", grid, fmt=\"%s\", delimiter=\",\")"
+    "np.savetxt(\"SB_Squares.csv\", grid, fmt=\"%s\", delimiter=\",\")"
    ]
   }
  ],
